# agents-quickstart

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
A2A/: README.md  main.py  session_manager.py
A2A/agents/: README.md  customer_agent.py  loan_agent.py
AWS Nova Sonic/: README.md  aws_novasonic_agent_quickstart.py
Advanced Cascade Pipeline Mode/: README.md  advanced_cascade_pipeline.py
Advanced Cascading Pipeline/: README.md  advanced_cascading_pipeline.py
Background Audio/: README.md  background_audio.py
Call Transfer/: README.md  call_transfer.py
Cascade Pipeline Mode/: README.md  cascade_agent_quickstart.py  test_mqtt.py
Cascading Pipeline/: README.md  cascading_agent_quickstart.py
Conversational Graph/: README.md  workflow_agent.py
DTMF Event/: README.md  main.py
DTMF Handler/: README.md  dtmf_handler.py
Fallback Recovery/: README.md  fallback_recovery.py
Google Gemini/: README.md  gemini_agent_quickstart.py
Google Gemini (LiveAPI)/: README.md  gemini_agent_quickstart.py
Human In The Loop/: README.md  customer_agent.py
Hybrid Mode/: README.md  hybrid_custom_stt_realtime.py  hybrid_realtime_custom_tts.py
IoT-quickstart/: README.md  agent-iot.py
Knowledge Base/: README.md  knowledge_base.py
MCP/: README.md  mcp_agent.py
MCP Server/: README.md
Memory/: README.md  agent.py  memory_utils.py
Multi Agent Switch /: README.md  multi_agent_switch.py
Multi Agent Switch/Health Care agent/: README.md  health_care_agent.py
Multi Agent Switch/Travel Agent/: README.md  travel_agent.py
Namo Turn Detector/: README.md  main.py
OpenAI/: README.md  openai_agent_quickstart.py
Pipeline Hooks/: README.md  pipeline_hooks_agent.py
Pubsub/: README.md  pubsub_agent.py
RAG/: README.md  rag.py
Realtime Pipeline Mode/: README.md
Realtime Pipeline Mode/AWS Nova Sonic/: README.md  aws_novasonic_realtime_agent.py
Recording/: README.md  meeting_example.py  recording_example.py  track_example.py
Reply Interrupt Agent/: reply_interrupt_agent.py
Room Options/: README.md  room_options_example.py
Transports/: README.md
Unity-quickstart/: README.md  agent-unity.py
Utterance Handle/: README.md  utterance_handle_agent.py
Virtual Avatar/: README.md  anam_cascading_example.py  anam_realtime_example.py  simli_cascading_example.py  simli_realtime_example.py
Vision/: vision_cascading.py
Voice Mail Detector/: README.md  voice_mail_detector.py
Wakeup Call/: wakeup_call.py
n8n Workflow/: README.md  appointment_telephony.py  customer_followup_agent.json
(+31 files in other folders)
